--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">lab1</string>
     <string name="buttonText">Перейти на второй action</string>
+    <string name="toGithub">Посмотрите мой github</string>
 </resources>
